k8s/gateway/argocd-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant

metadata:
  name: allow-xambook-gateway
  namespace: argocd

spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: xambook

  to:
    - group: ""
      kind: Secret
      name: argocd-tls-secret
