k8s/gateway/minio-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-minio
  namespace: minio
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: minio
  to:
    - group: ""
      kind: Service
