k8s/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - "argocd.xambook.com"

  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
