k8s/gateway/minio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: minio-api-route
  namespace: minio

spec:
  parentRefs:
    - name: xambook-gateway
      namespace: xambook
      sectionName: https

  hostnames:
    - "minio.xambook.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: xambook-minio-hl
          port: 9000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: minio-console-route
  namespace: minio

  annotations:
    io.cilium/lb-protocol: http

spec:
  parentRefs:
    - name: xambook-gateway
      namespace: xambook
      sectionName: https

  hostnames:
    - "console.minio.xambook.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: xambook-minio-console
          port: 9090
