k8s/gateway/minio-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api-route
  namespace: minio
spec:
  parentRefs:
    - name: xambook-gateway
      namespace: xambook
      sectionName: https
  hostnames:
    - "minio.xambook.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console-route
  namespace: minio
spec:
  parentRefs:
    - name: xambook-gateway
      namespace: xambook
      sectionName: https
  hostnames:
    - "console.minio.xambook.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: xambook-minio-console
          port: 9090
